tests/snapshots/examples_fixtures/type_system__TypeSystem__RealProgramPrimops.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/RealProgramPrimops.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `TypeSystem.RealProgramPrimops` doesn't match file path `examples/type_system/TypeSystem/RealProgramPrimops.flx`.

  --> examples/type_system/TypeSystem/RealProgramPrimops.flx:1:1
  |
1 | module TypeSystem.RealProgramPrimops {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
